<resources>
    <string name="app_name">SAJIDA Doctor</string>

    <!-- Main Activity -->
    <string name="no_consults">No Active Consults.\nYou can see patient records here once a consult is complete.</string>
    <string name="no_callback_requests">No Callback Requests.\nCallback Requests from a patient will be visible here.</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login to ur account</string>
    <string name="PleaseEnterYourPhone">Please enter your phone number</string>
    <string name="app_name_demo">SAJIDA Telehealth</string>
    <string name="doctor_user_app">Doctor User App</string>
    <string name="completed_consults">Completed Consults</string>

    <string name="callback_requests">Callback Requests</string>
    <string name="title_activity_case_details">CaseDetailsActivity</string>
    <string name="title_activity_callback_details">CallbackDetailsActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Confirmation Activity -->
    <string name="waiting_for_otp">waiting for OTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Callback Details -->
    <string name="you_have_received_callback">"You have received a Callback Request. Please accept the request within %1$s if you want to take this consultation."</string>
    <string name="title_activity_prescription">PrescriptionActivity</string>

    <string name="image_type_circular">circle</string>
    <string name="image_type_rectangle">rectangle</string>

    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>

    <!-- Colors -->
    <string name="primary_color_string">FF447EFF</string>
    <string name="title_activity_pdfviewer">PDFViewerActivity</string>
    <string name="title_activity_signature">SignatureActivity</string>

    <!-- Bottom Sheet Fragments -->
    <!-- Choose Camera or Gallery -->
    <string name="choose_camera_gallery">Please select a source for\nprofile image</string>

    <!-- Upload Document Fragment -->
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="uploads">share</string>
    <string name="upload_documents">upload\ndocuments</string>
    <string name="close">close</string>
    <string name="upload_document">upload a new document\nor pick from existing documents</string>
    <string name="title_activity_terms_and_conditions">TermsAndConditionsActivity</string>

    <!-- Prescription Activity -->
    <string name="use_desktop_app_to_update_diet_chart">Use the Sajida TeleHealth Doctor Desktop Application to update the diet chart</string>
    <string name="use_desktop_app_to_create_diet_chart">Use the eleHealth Doctor Desktop Application to create the diet chart</string>
    <string name="use_desktop_app_to_create_diet_chart_in_proper_format">Please use the Doctor 24x7 Desktop Application to create the detailed diet chart.</string>
    <string name="diet_chart_provided_by_desktop_app">Please use the SAJIDA TeleHealth Doctor Desktop Application to update the detailed diet chart.</string>
    <string name="use_desktop_app_to_edit">Please use the SAJIDA TeleHealth Doctor Desktop Application to create the detailed diet chart.</string>

    <!-- General -->
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="body_temperature_c">Body temperature (c)</string>
    <string name="pulse_rate_bpm">Pulse rate (BPM)</string>
    <string name="respiration_rate_pm">Respiration rate (PM)</string>
    <string name="blood_pressure_sys_dia">Blood pressure (Sys/Dia)</string>
    <string name="body_weight_kg">Body weight (KG)</string>
    <string name="blood_sugar_mmol_l">Blood sugar (mmol/L)</string>
    <string name="_00">00</string>
    <string name="view_vitals">View Vitals</string>


    <string name="agora_app_id">eeb3ec1dccd4484da05dbb3b12eba042</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="certificate">91c7e97dae294a118518714acf1ef12c</string>
    <string name="agora_access_token">006eeb3ec1dccd4484da05dbb3b12eba042IABzDd4uOb3goZTmQXbGgDp+dJI/pGvIlXevuyNLPkXY41QEHaEAAAAAEADOpjO6UF98XwEAAQBPX3xf</string>
</resources>